[package]
name = "rlox"
version = "0.1.0"
authors = ["Achille Heraud"]
edition = "2021"
repository = "https://github.com/aHeraud/rlox"
license-file = "LICENSE"

[lib]
crate-type = ["cdylib", "rlib"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.89"
web-sys = {  version = "0.3.66", features = ["console"] }
